--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+chardet==5.2.0
 contourpy==1.3.0
 cycler==0.12.1
 fonttools==4.54.1
@@ -8,4 +9,5 @@ packaging==24.1
 pillow==11.0.0
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
+reportlab==4.2.5
 six==1.16.0
